2011-07-30  Dietmar Warning
 * adms/ekv/admsva/ekv.va: semicolon after macro expl was wrong
 * adms/mextram/admsva: update va code from version 504.7 to 504.9.1

2011-07-27  Holger Vogt
 * inpcom.c: nested parens, line 2963 ff
 * cmutil.c: inlude ngspice.h for NaN

2011-07-26  Robert Larice
 * src/spicelib/devices/adms/admst/ngspice.xml :
   lower-case the first string in an IOP("HuGo",...) incantation

2011-07-26  Laurent Lemaitre
 * src/spicelib/devices/adms/admst/ngspice.xml :
   remove perl command in generated Makefime.am
     which lower-case'ed the first string in an IOP("HuGo",...) incantation

2011-07-26  Robert Larice
 * src/include/ngspice.h ,
 * src/spicelib/devices/adms/admst/ngspice.xml :
   swallow unsed variable warnings in adms generated code, upagrade dependencies

2011-07-26  Laurent Lemaitre
 * src/spicelib/devices/adms/admst/ngspice.xml :
   Fixed code generation for ekv by adding definition of min and max and logE.

2011-07-25  Laurent Lemaitre
 * src/spicelib/devices/adms/admst/ngspice.xml :
   fixed handling of expressions used as default value in parameter definition:
     parameter real p=ln(q)

2011-07-25  Robert Larice
 * src/spicelib/devices/adms/admst/ngspice.xml :
   convert K&R function definitions to ansi style
     and declare are debug function `static'

2011-07-24  Robert Larice
 * src/frontend/plotting/plotit.c :
   cleanup getlims() and plug a memory leak

2011-07-24  Robert Larice
 * src/xspice/ipc/ipcstdio.c :
   (int) cast, where size can be expected to be small enough

2011-07-24  Robert Larice
 * src/misc/util.c :
   use size_t

2011-07-24  Robert Larice
 * src/spicelib/parser/inp2m.c :
   avoid incorrect bindnodes when falling back to a 4 node device
     thats a polish of saj's fix from 2003-07-23

2011-07-24  Robert Larice
 * src/spicelib/devices/bsim3soi_dd/b3soiddld.c :
   bug fix, incomplete check for NAN
     did this `TURKEY' try to fool the poor old man's eyes, who is named `Alberto' ?

2011-07-24  Robert Larice