@@ -42,9 +42,9 @@ mkvar(char **p, char *path_prefix, char *var_dir, char *env_var)
 
 #ifdef HAVE_ASPRINTF
     if (buffer)
-	asprintf(p, "%s", buffer);
+        asprintf(p, "%s", buffer);
     else
-	asprintf(p, "%s%s%s", path_prefix, DIR_PATHSEP, var_dir);
+        asprintf(p, "%s%s%s", path_prefix, DIR_PATHSEP, var_dir);
 #else /* ~ HAVE_ASPRINTF */
     if (buffer){
         *p = TMALLOC(char, strlen(buffer) + 1);
@@ -62,7 +62,7 @@ mkvar(char **p, char *path_prefix, char *var_dir, char *env_var)
 void
 ivars(char *argv0)
 {
-    char *temp=NULL, *ngpath;
+    char *temp=NULL;
 	 /* $dprefix has been set to /usr/local or C:/Spice (Windows) in configure.ac,
     NGSPICEBINDIR has been set to $dprefix/bin in configure.ac, 
     Spice_Exec_Dir has been set to NGSPICEBINDIR in conf.c,
@@ -82,11 +82,19 @@ ivars(char *argv0)
     mkvar(&Spice_Path, Spice_Exec_Dir, "ngspice", "SPICE_PATH");
     /* may be used to store input files (*.lib, *.include, ...) */
     /* get directory where ngspice resides */
-    ngpath = ngdirname(argv0);
-    /* set path either to <ngspice-directory>/input or, if set, to
-    environment variable NGSPICE_INPUT_DIR */
-    mkvar(&Inp_Path, ngpath, "input", "NGSPICE_INPUT_DIR");
-
+#if defined (HAS_WINDOWS) || defined (__MINGW32__) || defined (_MSC_VER)
+    {
+        char *ngpath = ngdirname(argv0);
+        /* set path either to <ngspice-bin-directory>/input or,
+        if set, to environment variable NGSPICE_INPUT_DIR */
+        mkvar(&Inp_Path, ngpath, "input", "NGSPICE_INPUT_DIR");
+    }
+#else
+    NG_IGNORE(argv0);
+    /* set path either to environment variable NGSPICE_INPUT_DIR
+    (if given) or to NULL */
+    env_overr(&Inp_Path, "NGSPICE_INPUT_DIR");
+#endif
     env_overr(&Spice_Host, "SPICE_HOST"); /* aspice */
     env_overr(&Bug_Addr, "SPICE_BUGADDR");
     env_overr(&Def_Editor, "SPICE_EDITOR");
@@ -108,5 +116,6 @@ cleanvars(void)
     tfree(Help_Path);
     tfree(Lib_Path);
     tfree(Spice_Path);
-    tfree(Inp_Path);
+    if (Inp_Path) /* may be NULL in LINUX */
+        tfree(Inp_Path);
 }
