@@ -6,26 +6,25 @@ Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		console_debug|Win32 = console_debug|Win32
 		console_debug|x64 = console_debug|x64
+		console_release_omp|Win32 = console_release_omp|Win32
+		console_release_omp|x64 = console_release_omp|x64
 		console_release|Win32 = console_release|Win32
 		console_release|x64 = console_release|x64
 		Debug|Win32 = Debug|Win32
 		Debug|x64 = Debug|x64
-		Debug64|Win32 = Debug64|Win32
-		Debug64|x64 = Debug64|x64
 		Release|Win32 = Release|Win32
 		Release|x64 = Release|x64
-		Release64|Win32 = Release64|Win32
-		Release64|x64 = Release64|x64
 		ReleaseOMP|Win32 = ReleaseOMP|Win32
 		ReleaseOMP|x64 = ReleaseOMP|x64
-		ReleaseOmp64|Win32 = ReleaseOmp64|Win32
-		ReleaseOmp64|x64 = ReleaseOmp64|x64
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_debug|Win32.ActiveCfg = console_debug|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_debug|Win32.Build.0 = console_debug|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_debug|x64.ActiveCfg = console_debug|x64
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_debug|x64.Build.0 = console_debug|x64
+		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_release_omp|Win32.ActiveCfg = console_release|x64
+		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_release_omp|x64.ActiveCfg = console_release|x64
+		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_release_omp|x64.Build.0 = console_release|x64
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_release|Win32.ActiveCfg = console_release|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_release|Win32.Build.0 = console_release|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.console_release|x64.ActiveCfg = console_release|x64
@@ -34,26 +33,14 @@ Global
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Debug|Win32.Build.0 = Debug|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Debug|x64.ActiveCfg = Debug|x64
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Debug|x64.Build.0 = Debug|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Debug64|Win32.ActiveCfg = Debug64|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Debug64|Win32.Build.0 = Debug64|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Debug64|x64.ActiveCfg = Debug64|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Debug64|x64.Build.0 = Debug64|x64
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release|Win32.ActiveCfg = Release|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release|Win32.Build.0 = Release|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release|x64.ActiveCfg = Release|x64
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release|x64.Build.0 = Release|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release64|Win32.ActiveCfg = Release64|Win32
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release64|Win32.Build.0 = Release64|Win32
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release64|x64.ActiveCfg = Release64|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.Release64|x64.Build.0 = Release64|x64
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOMP|Win32.ActiveCfg = ReleaseOMP|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOMP|Win32.Build.0 = ReleaseOMP|Win32
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOMP|x64.ActiveCfg = ReleaseOMP|x64
 		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOMP|x64.Build.0 = ReleaseOMP|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOmp64|Win32.ActiveCfg = ReleaseOmp64|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOmp64|Win32.Build.0 = ReleaseOmp64|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOmp64|x64.ActiveCfg = ReleaseOmp64|x64
-		{83E315C7-EDD3-4F6B-AF28-87A92A4FA49A}.ReleaseOmp64|x64.Build.0 = ReleaseOmp64|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
