@@ -1,3 +1,9 @@
+2011-08-03  Holger Vogt
+ * ivars.c update for LINUX
+ * tclspice.c, nghelp.c, spiced.c: ivars(NULL)
+ * main.c: reference to memory leak checker for Windows removed
+ * visualc/vngspice.sln, visualc\vngspice.vcproj: 32 and 64 bit
+ 
 2011-07-30  Dietmar Warning
  * adms/ekv/admsva/ekv.va: semicolon after macro expl was wrong
  * adms/mextram/admsva: update va code from version 504.7 to 504.9.1
